--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
-    <title>Ensolvers Challenge - Matías Gluck</title>
+    <title>Notes App</title>
     <!-- Fontawesome -->
     <script src="https://kit.fontawesome.com/68ba57d17d.js" crossorigin="anonymous"></script>
   </head>
